Bug 74873 - WebVTT cues sometimes render when they should not
Summary: WebVTT cues sometimes render when they should not
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: Media (show other bugs)
Version: 528+ (Nightly build)
Hardware: All All
: P2 Normal
Assignee: Eric Carlson
URL:
Keywords: InRadar
Depends on:
Blocks: 43668
  Show dependency treegraph
 
Reported: 2011-12-19 11:00 PST by Eric Carlson
Modified: 2011-12-20 18:38 PST (History)
3 users (show)

See Also:


Attachments
Proposed patch (7.49 KB, patch)
2011-12-19 11:20 PST, Eric Carlson
darin: review+
webkit.review.bot: commit-queue-
Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Eric Carlson 2011-12-19 11:00:14 PST
Captions continue to render after their end time if there are no cues at all for the current time.
Comment 1 Radar WebKit Bug Importer 2011-12-19 11:01:10 PST
<rdar://problem/10601950>
Comment 2 Eric Carlson 2011-12-19 11:20:01 PST
Created attachment 119893 [details]
Proposed patch
Comment 3 WebKit Review Bot 2011-12-19 12:11:35 PST
Comment on attachment 119893 [details]
Proposed patch

Attachment 119893 [details] did not pass chromium-ews (chromium-xvfb):
Output: http://queues.webkit.org/results/10915029

New failing tests:
media/track/track-cue-nothing-to-render.html
Comment 4 Eric Carlson 2011-12-20 17:14:51 PST
http://trac.webkit.org/changeset/103371
Comment 5 Eric Carlson 2011-12-20 17:16:52 PST
I can't figure out why the new test failed on the Linux bot, will watch the builders and fix or skip it.
Comment 6 Eric Carlson 2011-12-20 18:38:39 PST
Plus http://trac.webkit.org/changeset/103386 to fix the cr build.